@@ -1,0 +1,9 @@
+package test.reports.issue2879;
+
+import org.testng.IExecutionListener;
+
+public class AnotherPrintingListener implements IExecutionListener {
+
+  @Override
+  public void onExecutionStart() {}
+}
