@@ -1,0 +1,11 @@
+package test.reports.issue2879;
+
+import org.testng.IInvokedMethod;
+import org.testng.IInvokedMethodListener;
+import org.testng.ITestResult;
+
+public class PrintingListener implements IInvokedMethodListener {
+
+  @Override
+  public void beforeInvocation(IInvokedMethod method, ITestResult testResult) {}
+}
